Phase 0 of ActionResolver refactor